# Talking-To-Air

./: .coveragerc  .env.example  .gitignore  CLAUDE.md  GemeniAgent.py  README.md  agent.py  docker-compose.yml  main.py  requirements.txt  start.bat
Backend/: .dockerignore  Dockerfile  GemeniAgent.py  SCALABILITY.md  TESTING_AND_OBSERVABILITY.md  agent.py  api.py  conftest.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
Backend/agents/: earthdata_agent.py  ground_sensor_agent.py  satellite_agent.py  subagent_trim.py  supervisor_agent.py
Backend/config/: connectors.py  earthdata_agent_prompt.py  error_templates.py  ground_sensor_agent_promp.py  ground_sensor_agent_prompt.py  model_factory.py  satellite_agent_prompt.py  settings.py  starter_prompts.py  supervisor_prompt.py  system_prompt.py  workflow_stages.py
Backend/datasets/: __init__.py  collections.yaml  mask_info.py  preset_collections.py  qa_flags.py  registry.py
Backend/earthdata_mcp/: client.py  connection.py  results.py  toolset.py  workspace.py
Backend/models/: __init__.py  agent_result.py  artifact.py  user.py
Backend/preprocessing/: __init__.py  aggregation_service.py  cache_index.py  cache_manager.py  data_loader.py  dataset_parser.py  zarr_normalization.py
Backend/repositories/: __init__.py  cache_index_repository.py  chart_repository.py  revoked_token_repository.py  session_metadata_repository.py  session_repository.py  user_connector_repository.py  user_repository.py  zarr_repository.py
Backend/scripts/: generate_collection.py  load_chat.py
Backend/services/: artifact_registry.py  artifact_store.py  auth_service.py  (+20 more)
(+245 files in other folders)
