[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tta-backend"
version = "0.1.0"
description = "Talking to Air backend services and agents"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agents*",
    "config*",
    "datasets*",
    "models*",
    "preprocessing*",
    "repositories*",
    "services*",
    "tools*",
    "utils*",
]

[tool.setuptools.package-data]
datasets = ["*.yaml"]

[tool.pytest.ini_options]
addopts = "-m \"not eval and not live_mcp\""
markers = [
    "eval: scripted agent-behavior eval (T04) — spends real model tokens, run explicitly with -m eval",
    "live_mcp: live-smoke suite against the real earthdata-retrieval MCP (T17) — requires both Docker stacks up, run explicitly with -m live_mcp",
]
